# serializer version: 1
# name: test_build_file_handler_builder
  dict({
    'capacity': 10,
    'flush_record_interval': 2,
    'formatter_id': 'default',
    'formatter_kind': 'id',
    'overflow_policy': 'drop',
    'path': 'test.log',
  })
# ---
# name: test_build_rotating_file_handler_builder
  dict({
    'backup_count': 5,
    'capacity': 10,
    'flush_record_interval': 2,
    'formatter_id': 'default',
    'formatter_kind': 'id',
    'max_bytes': 1024,
    'overflow_policy': 'drop',
    'path': 'test.log',
  })
# ---
# name: test_dictconfig_rotating_file_handler_builder
  dict({
    'backup_count': 5,
    'capacity': 10,
    'flush_record_interval': 2,
    'formatter_id': 'default',
    'formatter_kind': 'id',
    'max_bytes': 1024,
    'overflow_policy': 'drop',
    'path': 'test.log',
  })
# ---
# name: test_build_stream_handler_builder
  dict({
    'capacity': 8,
    'formatter_id': 'default',
    'formatter_kind': 'id',
    'target': 'stdout',
  })
# ---
# name: test_build_stream_handler_builder_with_flush_timeout
  dict({
    'flush_timeout_ms': 250,
    'formatter_id': 'default',
    'formatter_kind': 'id',
    'target': 'stdout',
  })
# ---
# name: test_file_handler_builder_with_timeout_overflow_policy
  dict({
    'overflow_policy': 'timeout',
    'path': 'test.log',
    'timeout_ms': 500,
  })
# ---
# name: test_build_socket_handler_builder_for_tcp
  dict({
    'capacity': 8,
    'connect_timeout_ms': 500,
    'host': '127.0.0.1',
    'max_frame_size': 2048,
    'port': 9020,
    'tls': True,
    'tls_domain': 'example.com',
    'tls_insecure': False,
    'transport': 'tcp',
    'write_timeout_ms': 250,
  })
# ---
